# eve-openai-codex

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  NOTICE  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yaml
docs/decisions/: 0001-composable-credential-source.md
src/: index.ts
test/: provider.test.ts
